traefik/internal/proton/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proton
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proton.local.chriggle.com`)
      kind: Rule
      services:
        - name: proton
          port: 443
      middlewares:
        - name: default-headers
  tls:
    secretName: local-chriggle-com-tls
